package com.digitalbank.predictbackend.entities;

public enum RoleBanquier {
    CONSEILLER,
    PORTEFEUILLEUR,
    DIRECTEUR
}
