package com.digitalbank.predictbackend.entities;

public enum TypeCompte {
    COURANT,
    EPARGNE,
    DEVISE,
    ENTREPRISE   
}